# supercat

./: .buildinfo  .coveragerc  .gitignore  .gitlab-ci.yml  README.rst  api.html  cli.html  credits.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  quickstart.html  search.html  searchindex.js  validate_individual.py  validate_individual_3d.py
.doctrees/: api.doctree  cli.doctree  credits.doctree  environment.pickle  index.doctree  quickstart.doctree
.github/workflows/: docs.yml  testing.yml
_sources/: cli.rst.txt  credits.rst.txt  index.rst.txt
coverage/: index.html  status.json  supercat___init___py.html  supercat_apps_py.html  supercat_augmentation_py.html  supercat_diffusion_py.html  supercat_enums_py.html  supercat_interpolation_py.html  supercat_metrics_py.html  supercat_models_py.html  supercat_noise___init___py.html  supercat_noise_apps_py.html  supercat_noise_fractal_py.html  supercat_noise_noise_py.html  supercat_noise_worley_py.html  supercat_transforms_py.html  supercat_visualization_py.html
docs/: api.rst  conf.py  credits.rst  index.rst
supercat/: __init__.py  apps.py  augmentation.py  diffusion.py  enums.py  fractal.py  interpolation.py  loss.py  metrics.py  models.py  transforms.py  visualization.py  worley.py
supercat/image/: apps.py  transforms.py
supercat/noise/: apps.py  fractal.py  noise.py  worley.py
tests/: conftest.py  test_apps.py  test_loss.py  test_models.py  test_noise_apps.py  test_noise_fractal.py  test_transforms.py  test_worley.py
tests/expected/TestNoise/test_cli/: bibliography.yaml  show-batch_help.yaml  train_help.yaml  tune_help.yaml
tests/expected/TestNoise/test_model/: model_default.yaml
tests/expected/TestNoise/test_monitor/: monitor_default.yaml
(+19 files in other folders)
