[tool.poetry]
name = "supercat"
version = "0.1.0"
description = "A deep learning model for CT scan super-resolution."
authors = ["MDAP <robert.turnbull@unimelb.edu.au>"]
license = "Apache Software License 2.0"
readme = "README.rst"
homepage = "https://rbturnbull.github.io/supercat/"
repository = "https://github.com/rbturnbull/supercat"
documentation = "https://rbturnbull.github.io/supercat/"
keywords = ["super-resolution", "Computed tomography (CT)", "torchapp", "rock", "sand", "3D"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
torchapp = {git = "https://github.com/rbturnbull/torchapp.git"}
mat73 = "^0.59"
hdf5storage = "^0.1.18"
tricubic = {git = "https://github.com/rbturnbull/pytricubic.git"}
plotly = "^5.8.2"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
ipykernel = "^6.6.1"
coverage = "^5.5"
autopep8 = "^1.5.7"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.15.2"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"
black = "^21.10b0"
sphinx-click = {git = "https://github.com/rbturnbull/sphinx-click.git"}

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]

[build-system]
requires = [  "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
supercat = "supercat.apps:Supercat.main"
supercat3d = "supercat.apps:Supercat3d.main"
